[package]
edition = "2018"
name = "naut"
version = "0.14.4"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Accessible image processing and conversion from the terminal (and a front-end for the 'image' crate)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/naut"
readme = "README.md"
exclude = [
    ".idea/*",
    ".vscode/*",
    "*.iml",
    ".travis.yml",
    "RELEASE_STEPS.md",
]
keywords = ["image", "converter", "cli", "front-end", "image-cli"]
categories = ["multimedia::images", "command-line-utilities"]

[workspace]
members = [
    "components/naut_cli_ops",
    "components/naut_core",
    "components/naut_image_engine",
    "components/naut_io",
    "components/naut_parser",
    "components/naut_testing",
]

[dependencies]
naut_cli_ops = { version = "=0.14.4", path = "components/naut_cli_ops" }
naut_core = { version = "=0.14.4", path = "components/naut_core" }
naut_io  = { version = "=0.14.4", path = "components/naut_io" }
naut_image_engine = { version = "=0.14.4", path = "components/naut_image_engine" }
naut_parser = { version = "=0.14.4", path = "components/naut_parser" }

anyhow = "1.0.33"
atty = "0.2.14"
clap = "2.33.3"
inflate = "0.4.5"
globwalk = "0.8.0"
open = "1.4.0"
strum = "0.19.5"

[dev-dependencies]
clap = "2.33.3" # for examples/gen_completions.rs
parameterized = "0.2.0"

[build-dependencies]
flate2 = "1.0.18"

[features]
imageproc-ops = ["naut_cli_ops/imageproc-ops", "naut_image_engine/imageproc-ops", "naut_parser/imageproc-ops"]

output-test-images = []

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

