[package]
name = "naut_core"
version = "0.14.19"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Component of the naut cli: re-exports global dependencies to sub-crates."
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/naut"

[dependencies]
image = { version = "0.23.11", features = ["avif"] }
