[package]
name = "naut_testing"
version = "0.14.11"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Component of the naut cli: provides commonly used testing operations for naut crates."
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/naut"

[dependencies]
naut_core = { version = "0.14.11", path = "../naut_core" }
parameterized  = "0.2.0"
